--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Colah the Koala: AI children's book</title>
+    <title>Cola the Koala: an AI-generated book</title>
     <link rel="apple-touch-icon" href="./img/icon.png"/>
     <link rel="icon" type="image" href="./img/icon.png" />
     <link rel="shortcut icon" href="./img/icon.png" />
