--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="apple-touch-icon" href="./img/icon.png"/>
     <link rel="icon" type="image" href="./img/icon.png" />
     <link rel="shortcut icon" href="./img/icon.png" />
-    <meta property="og:image" content="https://ai-book-colah.tarwin.art/img/og.webp"/>
+    <!--meta property="og:image" content="https://cola.midtown.ai/img/og.webp"/ -->
+    <meta property="og:image" content="https://lh5.googleusercontent.com/EYi6KsftDjwS6j-yeb4t-4wSR0zvlBzJ75mTYP2FixUQg4PEcfi06LsNqaS4P68xgdAwJRjqZjB4aYhy192WfzQ=w16383"/>
     <link rel="manifest" href="/manifest.json" />
     <script src="./book.js"></script>
     <link rel="stylesheet" href="./book.css" />
