--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <link rel="shortcut icon" href="./img/icon.png" />
     <!--meta property="og:image" content="https://cola.midtown.ai/img/og.webp"/ -->
     <meta property="og:image" content="https://lh5.googleusercontent.com/EYi6KsftDjwS6j-yeb4t-4wSR0zvlBzJ75mTYP2FixUQg4PEcfi06LsNqaS4P68xgdAwJRjqZjB4aYhy192WfzQ=w16383"/>
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+    <meta property="og:title" content="By: Florian MB - 6th Grader at JLS">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.midtown.ai/">
+    <meta itemprop="image" content="https://lh5.googleusercontent.com/EYi6KsftDjwS6j-yeb4t-4wSR0zvlBzJ75mTYP2FixUQg4PEcfi06LsNqaS4P68xgdAwJRjqZjB4aYhy192WfzQ=w16383">
+    <meta itemprop="imageUrl" content="https://lh5.googleusercontent.com/EYi6KsftDjwS6j-yeb4t-4wSR0zvlBzJ75mTYP2FixUQg4PEcfi06LsNqaS4P68xgdAwJRjqZjB4aYhy192WfzQ=w16383">
     <link rel="manifest" href="/manifest.json" />
     <script src="./book.js"></script>
     <link rel="stylesheet" href="./book.css" />
