--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cola the Koala: an AI-generated book v0.0.1</title>
     <link rel="apple-touch-icon" href="./img/icon.png"/>
-    <link rel="icon" type="image" href="./img/icon.png" />
+    <!-- link rel="icon" type="image" href="./img/icon.png" / -->
     <link rel="shortcut icon" href="./img/icon.png" />
     <!--meta property="og:image" content="https://cola.midtown.ai/img/og.webp"/ -->
     <meta property="og:image" content="https://lh5.googleusercontent.com/EYi6KsftDjwS6j-yeb4t-4wSR0zvlBzJ75mTYP2FixUQg4PEcfi06LsNqaS4P68xgdAwJRjqZjB4aYhy192WfzQ=w16383"/>
     <meta name="referrer" content="strict-origin-when-cross-origin">
-    <meta property="og:title" content="By: Florian MB - 6th Grader at JLS">
+    <link rel="icon" href="https://ssl.gstatic.com/atari/images/public/favicon.ico">
+    <meta property="og:title" content="Cola the Koala: an AI-generated book v0.0.3">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.midtown.ai/">
+    <meta property="og:url" content="https://cola.midtown.ai/">
+    <meta property="og:description" content="Are">
+    <meta itemprop="name" content="Cola the Koala: an AI-generated book v0.0.4">
+    <meta itemprop="description" content="Are">
+    <meta itemprop="url" content="https://cola.midtown.ai/">
+    <meta itemprop="thumbnailUrl" content="https://lh5.googleusercontent.com/EYi6KsftDjwS6j-yeb4t-4wSR0zvlBzJ75mTYP2FixUQg4PEcfi06LsNqaS4P68xgdAwJRjqZjB4aYhy192WfzQ=w16383">
     <meta itemprop="image" content="https://lh5.googleusercontent.com/EYi6KsftDjwS6j-yeb4t-4wSR0zvlBzJ75mTYP2FixUQg4PEcfi06LsNqaS4P68xgdAwJRjqZjB4aYhy192WfzQ=w16383">
     <meta itemprop="imageUrl" content="https://lh5.googleusercontent.com/EYi6KsftDjwS6j-yeb4t-4wSR0zvlBzJ75mTYP2FixUQg4PEcfi06LsNqaS4P68xgdAwJRjqZjB4aYhy192WfzQ=w16383">
     <link rel="manifest" href="/manifest.json" />
