--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- link rel="icon" type="image" href="./img/icon.png" / -->
     <link rel="shortcut icon" href="./img/icon.png" />
     <!--meta property="og:image" content="https://cola.midtown.ai/img/og.webp"/ -->
-    <meta property="og:image" content="https://lh5.googleusercontent.com/EYi6KsftDjwS6j-yeb4t-4wSR0zvlBzJ75mTYP2FixUQg4PEcfi06LsNqaS4P68xgdAwJRjqZjB4aYhy192WfzQ=w16383"/>
+    <meta property="og:image" content="https://lh5.googleusercontent.com/EYi6KsftDjwS6j-yeb4t-4wSR0zvlBzJ75mTYP2FixUQg4PEcfi06LsNqaS4P68xgdAwJRjqZjB4aYhy192WfzQ=w16383">
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <link rel="icon" href="https://ssl.gstatic.com/atari/images/public/favicon.ico">
     <meta property="og:title" content="Cola the Koala: an AI-generated book v0.0.3">
