--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <meta itemprop="name" content="Cola the Koala: an AI-generated book v0.0.4">
     <meta itemprop="description" content="Are">
     <meta itemprop="url" content="https://cola.midtown.ai/">
-    <meta itemprop="thumbnailUrl" content="https://cola.midtown.ai/img/og.web">
-    <meta itemprop="image" content="https://cola.midtown.ai/img/og.web">
-    <meta itemprop="imageUrl" content="https://cola.midtown.ai/img/og.web">
+    <meta itemprop="thumbnailUrl" content="https://cola.midtown.ai/img/og.webp">
+    <meta itemprop="image" content="https://cola.midtown.ai/img/og.webp">
+    <meta itemprop="imageUrl" content="https://cola.midtown.ai/img/og.webp">
     <link rel="manifest" href="/manifest.json" />
     <script src="./book.js"></script>
     <link rel="stylesheet" href="./book.css" />
