--- a/index.html
+++ b/index.html
@@ -28,14 +28,13 @@
   </head>
   <body>
     <div id="book">
+      <div class="left"><img src="./img/og.webp" /></div>
     </div>
-    <!--
     <div id="intro">
       <div class="left"><img src="./img/tap.png" /></div>
       <div class="center"><img src="./img/tap.png" /></div>
       <div class="right"><img src="./img/tap.png" /></div>
     </div>
-    -->
     <div id="rotate">
       <div><img src="./img/rotate.gif" /></div>
     </div>
