--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <!-- meta property="og:image" content="https://lh5.googleusercontent.com/EYi6KsftDjwS6j-yeb4t-4wSR0zvlBzJ75mTYP2FixUQg4PEcfi06LsNqaS4P68xgdAwJRjqZjB4aYhy192WfzQ=w16383" -->
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <link rel="icon" href="https://ssl.gstatic.com/atari/images/public/favicon.ico">
-    <meta property="og:title" content="Cola the Koala: an AI-generated book v0.0.1">
+    <!-- Used for sharing tile -->
+    <meta property="og:title" content="Cola the Koala: an AI-generated book">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://cola.midtown.ai/">
     <meta property="og:description" content="Are">
