--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <meta property="og:title" content="Cola the Koala: an AI-generated book">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://cola.midtown.ai/">
-    <meta property="og:description" content="Are">
+    <meta property="og:description" content="">
     <meta itemprop="name" content="Cola the Koala: an AI-generated book v0.0.1">
-    <meta itemprop="description" content="Are">
+    <meta itemprop="description" content="">
     <meta itemprop="url" content="https://cola.midtown.ai/">
     <meta itemprop="thumbnailUrl" content="https://cola.midtown.ai/img/og.webp">
     <meta itemprop="image" content="https://cola.midtown.ai/img/og.webp">
